opam-version: "2.0"
maintainer: "Edgar Aroutiounian <edgar.factorial@gmail.com>"
authors: "Edgar Aroutiounian <edgar.factorial@gmail.com>"
homepage: "https://github.com/fxfactorial/podge"
bug-reports: "https://github.com/fxfactorial/podge/issues"
license: "BSD-3-Clause"
dev-repo: "git+http://github.com/fxfactorial/podge.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
depends: [
  "ocaml" {>= "4.04.0"}
  "ANSITerminal" {>= "0.7"}
  "base-unix"
  "cohttp" {>= "0.21.0"}
  "ezxmlm" {>= "1.0.1"}
  "dune" {>= "1.11.0"}
  "re" {>= "1.7.1"}
  "tyxml" {>= "4.0.1"}
  "yojson" {>= "1.3.3"}
  "astring" {>= "0.8.3"}
]
synopsis: "Shortcuts and helpers for common tasks in OCaml ecosystem"
description: """
If you're doing any modern OCaml then you're doubtlessly annoyed by
the state of libraries and committing to one of the big ones can be
restricting. Podge is a single module containing specialized modules
for their respectives usages for seemingly common tasks.

Some conveniences with Podge:
1) Web: Simple HTTP get/put requests
2) Yojson: Pretty printing, updating keys, and removing key-value pairs
   from Yojson objects
3) Unix: Read output of a process, simple daemonize.
4) Xml: Simple reading of node content given a path.
5) ANSITerminal: Create a colored string for the shell,
   with or without current time.
6) Other modules: Math, Html5, Analyze, Cohttp, Printf, Debugging,
   and List.

Podge is especially useful for Hackathons and prototyping."""
